--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -8,5 +8,6 @@ services:
         stdin_open: true
         tty: true
         working_dir: '/tmp/work'
-        volumes: ../python:/tmp/work
+        volumes: 
+            - ../python:/tmp/work
         
